# BIC_ntuple

./: .gitignore  CMakeLists.txt  env.sh  main.cpp
include/: AbstractDAQParser.h  DAQTypeAParser.h  DAQTypeBParser.h  LinkDef.h  PacketHeader.h  functions.h  getFile.h  getMap.h  test.h
map/: TB202503.txt
src/: CMakeLists.txt  DAQTypeAParser.cpp  DAQTypeBParser.cpp  getFile.cpp  getMap.cpp  test.cpp
